--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           username: nnqq
           password: ${{ secrets.GH_CI_TOKEN }}
           registry: ghcr.io
-          repository: nnqq/${{ steps.substr.outputs.result }}
+          repository: ${{ github.repository }}
           tag_with_ref: true
           build_args: GH_CI_TOKEN=${{ secrets.GH_CI_TOKEN }}
 
@@ -40,7 +40,7 @@ jobs:
         run: doctl kubernetes cluster kubeconfig save k8s
 
       - name: Update deployment file
-        run: sed -i 's|busybox|ghcr.io/nnqq/${{ steps.substr.outputs.result }}:${{ github.event.release.tag_name }}|' $GITHUB_WORKSPACE/deploy/cronjob.yml
+        run: sed -i 's|busybox|ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}|' $GITHUB_WORKSPACE/deploy/cronjob.yml
 
       - name: Apply cron job
         run: kubectl -n leaq apply -f ${{ github.workspace }}/deploy
