--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v1
         with:
-          username: nnqq
+          username: leaq-ru
           password: ${{ secrets.GH_CI_TOKEN }}
           registry: ghcr.io
           repository: ${{ github.repository }}
